examples/test/testpolicy3997.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3997
  namespace: namespace317
spec:
  podSelector:
    matchLabels:
      key7: value23
      key46: value34
      key17: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value33
      podSelector:
        matchLabels:
          key4: value3
          key43: value41
